# base64_resizer

./: Makefile  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/prongbang/base64_resizer/: Base64ResizerPlugin.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/prongbang/base64_resizer_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: image_data.dart  main.dart
example/test/: widget_test.dart
ios/: base64_resizer.podspec
ios/Classes/: Base64ResizerPlugin.h  Base64ResizerPlugin.m  SwiftBase64ResizerPlugin.swift
lib/: base64_resizer.dart  image_base64_resizer.dart  image_base64_resizer_native_library.dart
lib/binding/: image_base64_resizer_native_library.dart
lib/extensions/: extensions.dart  pointer_int8_extension.dart  string_extension.dart  uint8list_extension.dart
rust/: Cargo.toml  Makefile  README.md
rust/header/: base64_resizer.h
rust/src/: lib.rs
test/: base64_resizer_test.dart
